# rasp_ros2

./: .gitignore  JsonFunction.py  README.md  Yolo.py  main.py  receiver.py  sender.py  webCam.py
install/: local_setup.sh  setup.sh
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client  ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/cmake/: ydlidar_ros2_driverConfig-version.cmake  ydlidar_ros2_driverConfig.cmake
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/config/: test_gmapping.rviz  ydlidar.rviz
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/environment/: ament_prefix_path.dsv  path.dsv
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/launch/: 4ros_ydlidar_launch.py  test_gmapping_launch.py  view_ydlidar_launch.py  x3_ydlidar_launch.py  ydlidar.py  ydlidar_4ros_view_launch.py  ydlidar_launch.py  ydlidar_raw_launch.py  ydlidar_x3_view_launch.py
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/params/: ydlidar.yaml  ydlidar_4ros.yaml  ydlidar_x3.yaml
install/ydlidar_sdk/lib/pkgconfig/: YDLIDAR_SDK.pc
install/ydlidar_sdk/share/ydlidar_sdk/: package.sh
log/: latest_build
runs/: predictions.json
src/machines_API/: sender.py
src/prediction_models_driver/: Yolo.py
src/webcam_ros2_driver/: package.xml  setup.py
src/ydlidar_ros2_driver-master/src/: ydlidar_ros2_driver_node.cpp
(+3 files in other folders)
